--- a/cpu-tensorboard/Dockerfile
+++ b/cpu-tensorboard/Dockerfile
@@ -1,4 +1,6 @@
 FROM okwrtdsh/mxnet:latest
 
 RUN conda install -y --quiet \
-	tensorflow
+	tensorflow \
+ && pip --no-cache-dir install \
+	mxboard
