--- a/gpu-tensorboard/Dockerfile
+++ b/gpu-tensorboard/Dockerfile
@@ -1,4 +1,6 @@
 FROM okwrtdsh/mxnet:gpu
 
 RUN conda install -y --quiet \
-	tensorflow-gpu
+	tensorflow-gpu \
+ && pip --no-cache-dir install \
+	mxboard
